changing user details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/root
-spring.datasource.username = userkvu
-spring.datasource.password = LFTcepnn
+
+spring.datasource.url = jdbc:mysql://localhost:3306/sampledb
+spring.datasource.username = userYCB
+spring.datasource.password = yEYRKvkgEGMJslHp
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 
