--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+#================================
+#=Server PORT
+
+server.port=8090
+
+#=================================
+
+
 # ===============================
 # = DATA SOURCE
 # ===============================
