--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,12 @@ server.port=8090
 # ===============================
 # = DATA SOURCE
 # ===============================
-#spring.datasource.url = jdbc:mysql://localhost:3306/spring-security-tutorial
+spring.datasource.url = jdbc:mysql://localhost:3306/emp
 #spring.datasource.url = jdbc:oracle:thin:@localhost:1521:bhukumar
-#spring.datasource.username = root
-#spring.datasource.password = root
-#spring.datasource.testWhileIdle = true
-#spring.datasource.validationQuery = SELECT 1
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
 # ===============================
 # ===============================
@@ -28,7 +28,7 @@ server.port=8090
 #spring.datasource.validationQuery = SELECT 1
 
 #h2 database
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 # Datasource
 #spring.datasource.url=jdbc:h2:file:~/test
