final code commit of sunday

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,26 +37,8 @@ server.port=8090
 #spring.datasource.testWhileIdle = true
 #spring.datasource.validationQuery = SELECT 1
 
-##Spring mongo 
-#spring.profiles: integration
-## use local or embedded mongodb at localhost:27017
-#---
-#spring.profiles: production
-#spring.data.mongodb.uri: mongodb://bhukumar:bhukumar@ds235169.mlab.com:35169/angularipl
-
-#spring.datasource.url= jdbc:postgresql://ec2-54-163-240-54.compute-1.amazonaws.com/demrs6ijjhv58k?sslmode=require
-#spring.datasource.username=mrctiivzzwtupr
-#spring.datasource.password=demrs6ijjhv58k 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-#spring.jpa.show-sql=false
-spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=update  
-#spring.jpa.hibernate.ddl-auto=validate
-
 #h2 database
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 # Datasource
 #spring.datasource.url=jdbc:h2:file:~/test
